# clibuart

./: .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  build.py  build32.bat  build64.bat  buildEclipse.sh  buildMake.sh  clibuartConfig.cmake.in
cmake/: ccache.cmake  hardening.cmake
examples/: CMakeLists.txt
examples/uart_example_dpa/: CMakeLists.txt  DPA.h  uart_example_dpa.c
include/: CMakeLists.txt  declspec.h  errors.h  iqrf_debug.h  iqrf_gpio.h  machines_def.h  sleepWrapper.h  sysfs_gpio.h  uart_iqrf.h
include/win/: spidev.h
src/: CMakeLists.txt  iqrf_gpio.c  uart_iqrf.c
sysfs_gpio/: CMakeLists.txt  sysfs_gpio.c
uart_iqrf/: CMakeLists.txt  README.md  uart_iqrf.c
